# osu-patcher

./: .gitignore  OsuPatcher.Runtime.sln  README.md
_patcher/: Config.cs  Main.cs  _patcher.csproj  packages.config
_patcher/Constants/: OsuConstants.cs  Patterns.cs
_patcher/Graphics/: pDrawable.cs  pSprite.cs  pSpriteText.cs  pSpriteUnloadable.cs  pText.cs
_patcher/Helpers/: ILPatch.cs  ILReader.cs  Xna.cs
_patcher/Options/: Category.cs  CheckBox.cs  Element.cs  FontAwesome.cs  Options.cs  Section.cs  TextBox.cs
_patcher/Patches/: AutoSaveRelaxScoresPatch.cs  BasePatch.cs  LocalisationPatch.cs  OptionsPatch.cs  PerformanceCalculationPatch.cs  PlayerInitializePatch.cs  PlayerOnLoadCompletePatch.cs  PlayerUpdatePatch.cs  RelaxComboBreakPatch.cs  RelaxMissPatch.cs  TransitionPatch.cs
_patcher/Performance/: Calculator.cs
_patcher/Play/: Performance.cs
_patcher/Properties/: AssemblyInfo.cs
_patcher/Resolver/: Score.cs  SpriteManager.cs
_patcher/Rosu/: Calculator.cs
_patcher/Utils/: BaseConfig.cs  Logger.cs
_patcher/Wrappers/: Color.cs  GameBase.cs  NotificationManager.cs  TextureManager.cs
_patcher/patch/: GameBase.cs  HitObjectManager.cs  (+4 more)
launcher/: index.html  package-lock.json  package.json
launcher/src-tauri/: Cargo.toml  tauri.conf.json
launcher/src-tauri/src/: lib.rs  main.rs
patcher/: Main.cs  OsuPatcher.Runtime.csproj  OsuPatcher.Runtime.sln
patcher-cli/: .gitignore  OsuPatcher.Cli.sln  patchershit.sln
refx-pp/: Cargo.toml
refx-pp/bindings/: refx_ffi.cs  refx_ffi.h  refx_ffi.py
refx-pp/src/: lib.rs
refx-pp/tests/: c_bindings.rs  csharp_bindings.rs  py_bindings.rs
rosu-pp/: Cargo.toml
rosu-pp/.github/workflows/: build.yml
rosu-pp/bindings/: rosu_ffi.cs  rosu_ffi.h  rosu_ffi.py
rosu-pp/src/: lib.rs
rosu-pp/tests/: c_bindings.rs  csharp_bindings.rs  py_bindings.rs
(+71 files in other folders)
