[package]
name = "osu-patcher-app"
version = "0.1.0"
description = "Desktop controls for osu! patcher"
authors = ["osu-patcher contributors"]
edition = "2021"

[lib]
name = "osu_patcher_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
thiserror = "2"
